--- a/html/Formulaire.html
+++ b/html/Formulaire.html
@@ -246,7 +246,8 @@
           <li class="list-inline-item"><a href="#"></a></li>
         </ul>
         <p class="copyright">
-          Company Name © 2018 <a href="mention-legal.html">Mention Légal</a>
+          Company Name © 2024
+          <a href="/html/mentions-legales.html">Mention Légal</a>
         </p>
       </footer>
     </div>
