--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -353,9 +353,11 @@
                     >
                       Fermer
                     </button>
-                    <button type="button" class="btn btn-primary">
-                      Aller à la page
-                    </button>
+                    <a href="/html/deco.html">
+                      <button type="button" class="btn btn-primary">
+                        Aller à la page
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -433,9 +435,11 @@
                     >
                       Fermer
                     </button>
-                    <button type="button" class="btn btn-primary">
-                      Aller à la page
-                    </button>
+                    <a href="/html/vetements.html">
+                      <button type="button" class="btn btn-primary">
+                        Aller à la page
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -509,9 +513,11 @@
                     >
                       Fermer
                     </button>
-                    <button type="button" class="btn btn-primary">
-                      Aller à la page
-                    </button>
+                    <a href="/html/vetements.html">
+                      <button type="button" class="btn btn-primary">
+                        Aller à la page
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -584,9 +590,11 @@
                     >
                       Fermer
                     </button>
-                    <button type="button" class="btn btn-primary">
-                      Aller à la page
-                    </button>
+                    <a href="/html/vetements.html">
+                      <button type="button" class="btn btn-primary">
+                        Aller à la page
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -656,9 +664,11 @@
                     >
                       Fermer
                     </button>
-                    <button type="button" class="btn btn-primary">
-                      Aller à la page
-                    </button>
+                    <a href="/html/vetements.html">
+                      <button type="button" class="btn btn-primary">
+                        Aller à la page
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -729,9 +739,11 @@
                     >
                       Fermer
                     </button>
-                    <button type="button" class="btn btn-primary">
-                      Aller à la page
-                    </button>
+                    <a href="/html/vetements.html">
+                      <button type="button" class="btn btn-primary">
+                        Aller à la page
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -765,7 +777,8 @@
           <li class="list-inline-item"><a href="#"></a></li>
         </ul>
         <p class="copyright">
-          Company Name © 2024 <a href="mention-legal.html">Mention Légal</a>
+          Company Name © 2024
+          <a href="/html/mentions-legales.html">Mention Légal</a>
         </p>
       </footer>
     </div>
