--- a/html/profil.html
+++ b/html/profil.html
@@ -346,7 +346,8 @@
           <li class="list-inline-item"><a href="#"></a></li>
         </ul>
         <p class="copyright">
-          Company Name © 2024 <a href="mention-legal.html">Mention Légal</a>
+          Company Name © 2024
+          <a href="/html/mentions-legales.html">Mention Légal</a>
         </p>
       </footer>
     </div>
