--- a/html/contact.html
+++ b/html/contact.html
@@ -122,78 +122,76 @@
             <div class="col-8 mx-auto pt-5">
               <div class="card mt-2 mx-auto p-4 bg-body-secondary">
                 <div class="card-body bg-body-secondary">
-                  <div class="container">
-                    <form id="contact-form" role="form">
-                      <div class="controls">
-                        <div class="row">
-                          <div class="col-md-6">
-                            <div class="form-group">
-                              <label for="form_name">Prénom *</label>
-                              <input
-                                id="form_name"
-                                type="text"
-                                name="name"
-                                class="form-control"
-                                required="required"
-                                data-error="Le prénom est obligatoire."
-                              />
-                            </div>
-                          </div>
-                          <div class="col-6">
-                            <div class="form-group">
-                              <label for="form_lastname">Nom *</label>
-                              <input
-                                id="form_lastname"
-                                type="text"
-                                name="surname"
-                                class="form-control"
-                                required="required"
-                                data-error="Le nom est obligatoire."
-                              />
-                            </div>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-12">
-                            <div class="form-group">
-                              <label for="form_email">Email *</label>
-                              <input
-                                id="form_email"
-                                type="email"
-                                name="email"
-                                class="form-control"
-                                required="required"
-                                data-error="L'email est obligatoire."
-                              />
-                            </div>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-12">
-                            <div class="form-group">
-                              <label for="form_message">Message *</label>
-                              <textarea
-                                id="form_message"
-                                name="message"
-                                class="form-control"
-                                rows="4"
-                                required="required"
-                                data-error="Il nous faut votre demande."
-                              ></textarea>
-                            </div>
-                          </div>
-
-                          <div class="col-md-12 pt-3">
+                  <form id="contact-form" role="form">
+                    <div class="controls">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group">
+                            <label for="surname">Prénom *</label>
                             <input
-                              type="submit"
-                              class="btn btn-primary btn-send pt-2 btn-block"
-                              value="Envoyer"
+                              id="surname"
+                              type="text"
+                              name="surname"
+                              class="form-control"
+                              required="required"
+                              data-error="Le prénom est obligatoire."
+                            />
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <div class="name">
+                            <label for="name">Nom *</label>
+                            <input
+                              id="name"
+                              type="text"
+                              name="name"
+                              class="form-control"
+                              required="required"
+                              data-error="Le nom est obligatoire."
                             />
                           </div>
                         </div>
                       </div>
-                    </form>
-                  </div>
+                      <div class="row">
+                        <div class="col-12">
+                          <div class="form-group">
+                            <label for="email">Email *</label>
+                            <input
+                              id="email"
+                              type="email"
+                              name="email"
+                              class="form-control"
+                              required="required"
+                              data-error="L'email est obligatoire."
+                            />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-12">
+                          <div class="form-group">
+                            <label for="message">Message *</label>
+                            <textarea
+                              id="message"
+                              name="message"
+                              class="form-control"
+                              rows="4"
+                              required="required"
+                              data-error="Il nous faut votre demande."
+                            ></textarea>
+                          </div>
+                        </div>
+
+                        <div class="col-md-12 pt-3">
+                          <input
+                            type="submit"
+                            class="btn btn-primary btn-send pt-2 btn-block"
+                            value="Envoyer"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
@@ -343,7 +341,8 @@
           <li class="list-inline-item"><a href="#"></a></li>
         </ul>
         <p class="copyright">
-          Company Name © 2024 <a href="mention-legal.html">Mention Légal</a>
+          Company Name © 2024
+          <a href="/html/mentions-legales.html">Mention Légal</a>
         </p>
       </footer>
     </div>
