--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -149,7 +149,11 @@
                 data-bs-target="#article1"
               >
                 <div class="card h-100">
-                  <img src="/img/grinch.png" class="card-img-top" alt="..." />
+                  <img
+                    src="/img/grinch.png"
+                    class="card-img-top"
+                    alt="Pull Grinch"
+                  />
                   <div class="card-body">
                     <h5 class="card-title">Pull Grinch - 35€</h5>
                     <p class="card-text">
@@ -223,7 +227,11 @@
                 data-bs-target="#article2"
               >
                 <div class="card h-100">
-                  <img src="/img/tabou.png" class="card-img-top" alt="..." />
+                  <img
+                    src="/img/tabou.png"
+                    class="card-img-top"
+                    alt="Tabouret"
+                  />
                   <div class="card-body">
                     <h5 class="card-title">Tabouret - 10€</h5>
                     <p class="card-text">
@@ -297,7 +305,11 @@
                 data-bs-target="#article3"
               >
                 <div class="card h-100">
-                  <img src="/img/fete.png" class="card-img-top" alt="..." />
+                  <img
+                    src="/img/fete.png"
+                    class="card-img-top"
+                    alt="Conféties"
+                  />
                   <div class="card-body">
                     <h5 class="card-title">Conféties et autres - 35€</h5>
                     <p class="card-text">
@@ -373,7 +385,7 @@
                   <img
                     src="/img/maillot-k.png"
                     class="card-img-top"
-                    alt="..."
+                    alt="Maillot Karmine Corp"
                   />
                   <div class="card-body">
                     <h5 class="card-title">Maillot Karmine Corp - 50€</h5>
@@ -455,7 +467,7 @@
                   <img
                     src="/img/maillot-alpine.png"
                     class="card-img-top"
-                    alt="..."
+                    alt="Maillot Alpine"
                   />
                   <div class="card-body">
                     <h5 class="card-title">Maillot Alpine - 120€</h5>
@@ -530,7 +542,11 @@
                 data-bs-target="#article6"
               >
                 <div class="card h-100">
-                  <img src="/img/miroir.png" class="card-img-top" alt="..." />
+                  <img
+                    src="/img/miroir.png"
+                    class="card-img-top"
+                    alt="Miroir"
+                  />
                   <div class="card-body">
                     <h5 class="card-title">Lot de miroirs - 30€</h5>
                     <p class="card-text">
@@ -607,7 +623,11 @@
                 data-bs-target="#article7"
               >
                 <div class="card h-100">
-                  <img src="/img/kway.png" class="card-img-top" alt="..." />
+                  <img
+                    src="/img/kway.png"
+                    class="card-img-top"
+                    alt="Manteau Kway"
+                  />
                   <div class="card-body">
                     <h5 class="card-title">Manteau Kway - 90€</h5>
                     <p class="card-text">
@@ -681,7 +701,11 @@
                 data-bs-target="#article8"
               >
                 <div class="card h-100">
-                  <img src="/img/pull.png" class="card-img-top" alt="..." />
+                  <img
+                    src="/img/pull.png"
+                    class="card-img-top"
+                    alt="Pull Ralph"
+                  />
                   <div class="card-body">
                     <h5 class="card-title">Pull Ralph - 60€</h5>
                     <p class="card-text">
