--- a/html/objet.html
+++ b/html/objet.html
@@ -114,7 +114,7 @@
           <div class="col-md-6">
             <img
               src="/img/tabou.png"
-              alt="Chemise Zara"
+              alt="Tabouret"
               class="img-fluid rounded shadow-sm object-fit-cover w-100 article"
             />
           </div>
