--- a/html/profil.html
+++ b/html/profil.html
@@ -148,7 +148,11 @@
                 data-bs-target="#article1"
               >
                 <div class="card h-100">
-                  <img src="/img/grinch.png" class="card-img-top" alt="..." />
+                  <img
+                    src="/img/grinch.png"
+                    class="card-img-top"
+                    alt="Pull Grinch"
+                  />
                   <div class="card-body">
                     <h5 class="card-title">Pull Grinch - 35€</h5>
                     <p class="card-text">
@@ -223,7 +227,11 @@
                 data-bs-target="#article2"
               >
                 <div class="card h-100">
-                  <img src="/img/tabou.png" class="card-img-top" alt="..." />
+                  <img
+                    src="/img/tabou.png"
+                    class="card-img-top"
+                    alt="Tabouret"
+                  />
                   <div class="card-body">
                     <h5 class="card-title">Tabouret - 10€</h5>
                     <p class="card-text">
