--- a/index.html
+++ b/index.html
@@ -65,17 +65,15 @@
             >
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link ps-3 active" aria-current="page" href="#">Accueil</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="html/catalogue.html"
-                    >Catalogue</a
+                  <a class="nav-link ps-3 active" aria-current="page" href="#"
+                    >Accueil</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/html/contact.html"
-                    >Contact</a
-                  >
+                  <a class="nav-link" href="html/catalogue.html">Catalogue</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/html/contact.html">Contact</a>
                 </li>
               </ul>
               <ul class="navbar-nav me-3 mb-2 mb-lg-0">
@@ -91,10 +89,14 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li>
-                      <a class="dropdown-item" href="/html/profil.html">Mon profil</a>
+                      <a class="dropdown-item" href="/html/profil.html"
+                        >Mon profil</a
+                      >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="/html/favoris.html">Mes favoris</a>
+                      <a class="dropdown-item" href="/html/favoris.html"
+                        >Mes favoris</a
+                      >
                     </li>
                     <li><hr class="dropdown-divider" /></li>
                     <li>
@@ -144,16 +146,12 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/chaussure.png" alt="" />
+                    <img src="../img/chaussure.png" alt="Chaussures" />
                   </a>
-                  <span class="text-center"
-                    > 5€</span
-                  >
+                  <span class="text-center"> 5€</span>
                   <div class="product-action">
                     <div class="product-action-style">
-
                       <a href="../html/vetements.html">VOIR </a>
-
                     </div>
                   </div>
                 </div>
@@ -163,7 +161,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/kway.png" alt="" />
+                    <img src="../img/kway.png" alt="Manteau Kway" />
                   </a>
                   <span> 100€</span>
                   <div class="product-action">
@@ -176,7 +174,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -192,7 +189,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -203,7 +199,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/maillot-alpine.png" alt="" />
+                    <img src="../img/maillot-alpine.png" alt="Maillot Alpine" />
                   </a>
                   <span> 60€</span>
                   <div class="product-action">
@@ -216,7 +212,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -224,7 +219,7 @@
                         href="../html/vetements.html"
                         data-abc="true"
                       >
-                      VOIR
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -232,7 +227,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -243,7 +237,10 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/maillot-k.png" alt="" />
+                    <img
+                      src="../img/maillot-k.png"
+                      alt="Maillot Karmine Corp"
+                    />
                   </a>
                   <span> 0.01€</span>
                   <div class="product-action">
@@ -256,7 +253,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -264,7 +260,7 @@
                         href="../html/vetements.html"
                         data-abc="true"
                       >
-                       VOIR
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -272,7 +268,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -297,16 +292,12 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/maillot-zidane.png" alt="" />
+                    <img src="../img/maillot-zidane.png" alt="Maillot Zidane" />
                   </a>
-                  <span class="text-center"
-                    > 850€</span
-                  >
+                  <span class="text-center"> 850€</span>
                   <div class="product-action">
                     <div class="product-action-style">
-
                       <a href="../html/vetements.html"> VOIR </a>
-
                     </div>
                   </div>
                 </div>
@@ -316,7 +307,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/pull.png" alt="" />
+                    <img src="../img/pull.png" alt="Pull Ralph" />
                   </a>
                   <span> 80€</span>
                   <div class="product-action">
@@ -329,7 +320,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -345,7 +335,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -356,7 +345,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/grinch.png" alt="" />
+                    <img src="../img/grinch.png" alt="Pull Grinch" />
                   </a>
                   <span>20€</span>
                   <div class="product-action">
@@ -369,7 +358,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -377,7 +365,7 @@
                         href="../html/vetements.html"
                         data-abc="true"
                       >
-                       VOIR
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -385,7 +373,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -396,7 +383,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/elfie.png" alt="" />
+                    <img src="../img/elfie.png" alt="Elfie" />
                   </a>
                   <span> 25€</span>
                   <div class="product-action">
@@ -409,7 +396,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -417,7 +403,7 @@
                         href="../html/vetements.html"
                         data-abc="true"
                       >
-                     VOIR
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -425,7 +411,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -450,16 +435,12 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/tabou.png" alt="" />
+                    <img src="../img/tabou.png" alt="Tabouret" />
                   </a>
-                  <span class="text-center"
-                    > 20€</span
-                  >
+                  <span class="text-center"> 20€</span>
                   <div class="product-action">
                     <div class="product-action-style">
-
                       <a href="../html/objet.html"> VOIR </a>
-
                     </div>
                   </div>
                 </div>
@@ -469,7 +450,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/papa-noel.png" alt="" />
+                    <img src="../img/papa-noel.png" alt="Statut Père-Noel" />
                   </a>
                   <span> 5€</span>
                   <div class="product-action">
@@ -482,7 +463,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -498,7 +478,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -509,7 +488,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/miroir.png" alt="" />
+                    <img src="../img/miroir.png" alt="Miroirs" />
                   </a>
                   <span> 15€</span>
                   <div class="product-action">
@@ -522,7 +501,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -538,7 +516,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -549,7 +526,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/fleur.png" alt="" />
+                    <img src="../img/fleur.png" alt="Fleurs" />
                   </a>
                   <span> 25€</span>
                   <div class="product-action">
@@ -562,7 +539,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -570,7 +546,7 @@
                         href="../html/objet.html"
                         data-abc="true"
                       >
-                       VOIR
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -578,7 +554,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -603,16 +578,12 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/cuis.png" alt="" />
+                    <img src="../img/cuis.png" alt="Moules cuisine" />
                   </a>
-                  <span class="text-center"
-                    > 10€</span
-                  >
+                  <span class="text-center"> 10€</span>
                   <div class="product-action">
                     <div class="product-action-style">
-
                       <a href="../html/deco.html"> VOIR </a>
-                       </a>
                     </div>
                   </div>
                 </div>
@@ -622,7 +593,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/fete.png" alt="" />
+                    <img src="../img/fete.png" alt="Conféties" />
                   </a>
                   <span> 7€</span>
                   <div class="product-action">
@@ -635,7 +606,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -651,7 +621,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -662,7 +631,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/lunette.png" alt="" />
+                    <img src="../img/lunette.png" alt="Lunettes" />
                   </a>
                   <span>3€</span>
                   <div class="product-action">
@@ -675,7 +644,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -691,7 +659,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
@@ -702,7 +669,7 @@
               <div class="product-wrapper mb-45 text-center">
                 <div class="product-img">
                   <a href="#" data-abc="true">
-                    <img src="../img/couleur.png" alt="" />
+                    <img src="../img/couleur.png" alt="Peinture " />
                   </a>
                   <span> 50€</span>
                   <div class="product-action">
@@ -715,7 +682,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                       <a
                         class="action-heart"
@@ -723,7 +689,7 @@
                         href="../html/deco.html"
                         data-abc="true"
                       >
-                       VOIR
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -731,7 +697,6 @@
                         href="#"
                         data-abc="true"
                       >
-
                       </a>
                     </div>
                   </div>
