--- a/html/deco.html
+++ b/html/deco.html
@@ -114,7 +114,7 @@
           <div class="col-md-6">
             <img
               src="/img/fete.png"
-              alt="Chemise Zara"
+              alt="Conféties"
               class="img-fluid rounded shadow-sm object-fit-cover w-100 article"
             />
           </div>
