--- a/html/favoris.html
+++ b/html/favoris.html
@@ -128,7 +128,7 @@
                 <div class="row">
                   <div class="card-sl">
                     <div class="card-image">
-                      <img src="../img/tabou.png" />
+                      <img src="../img/tabou.png" alt="Tabouret" />
                     </div>
 
                     <a class="card-action" href="#"
@@ -149,7 +149,7 @@
                 <div class="row">
                   <div class="card-sl">
                     <div class="card-image">
-                      <img src="../img/kway.png" />
+                      <img src="../img/kway.png" alt="Manteau Kway" />
                     </div>
 
                     <a class="card-action" href=""
@@ -170,7 +170,10 @@
                 <div class="row">
                   <div class="card-sl">
                     <div class="card-image">
-                      <img src="../img/maillot-zidane.png" />
+                      <img
+                        src="../img/maillot-zidane.png"
+                        alt="Maillot Zidane"
+                      />
                     </div>
 
                     <a class="card-action" href="#"
